--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ markdown: kramdown
 plugins:
   - octopress-debugger
   - jekyll-sitemap
+  - jekyll-redirect-from
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
